feat(settings): update settings module
- add to boto manager

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 install:
   - python setup.py install
   - pip install -r dev-requirements.txt
-script: "nosetests -v"
+script: "py.test -vv"
