--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python:
   - "2.7"
 install:
   - python setup.py install
-  - pip install -r dev-requirements.txt
-script: "nosetests -v"
+  - pip install -r dev-requirements.txt -r requirements.txt
+script: "py.test -v"
