--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,8 @@ python:
   - "2.7"
 install:
   - python setup.py install
+  - wget https://releases.hashicorp.com/consul/0.6.4/consul_0.6.4_linux_amd64.zip
+  - unzip consul_0.6.4_linux_amd64.zip
+  - ./consul agent -dev &
   - pip install -r dev-requirements.txt -r requirements.txt
 script: "py.test -v"
