--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
 python:
   - "2.7"
+  
+addons:
+  postgresql: "9.4"
+  
 install:
   - python setup.py install
   - pip install -r dev-requirements.txt -r requirements.txt
