--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+.pytest_cache/
 htmlcov/
 .tox/
 .coverage
@@ -56,3 +57,7 @@ target/
 
 # IDEs
 .idea/
+.vscode/
+
+# Databases
+*.sq3
