--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 xmltodict==0.9.2
 boto>=2.36.0
 python-dateutil==2.4.2
--e git+https://github.com/NCI-GDC/python-signpostclient@ca686f55772e9a7f839b4506090e7d2bb0de5f15#egg=signpostclient
+-e git+https://git@github.com/uc-cdis/indexclient.git@1.3.1#egg=indexclient
