--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ xmltodict==0.9.2
 boto>=2.36.0
 python-dateutil==2.4.2
 -e git+https://git@github.com/uc-cdis/indexclient.git@1.3.1#egg=indexclient
+-e git+https://github.com/uc-cdis/cdis-python-utils.git@0.2.8#egg=cdispyutils # required by indexd
+-e git+https://git@github.com/uc-cdis/indexd.git@0.4.1#egg=indexd
