--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 xmltodict==0.9.2
 boto>=2.36.0
 python-dateutil==2.4.2
--e git+https://git@github.com/uc-cdis/indexclient.git@1.3.1#egg=indexclient
+-e git+https://git@github.com/uc-cdis/indexclient.git@1.5.1#egg=indexclient
 -e git+https://github.com/uc-cdis/cdis-python-utils.git@0.2.8#egg=cdispyutils # required by indexd
--e git+https://git@github.com/uc-cdis/indexd.git@0.4.1#egg=indexd
+-e git+https://github.com/uc-cdis/doiclient.git@1.0.0#egg=doiclient
+-e git+https://github.com/uc-cdis/dosclient.git@1.0.0#egg=dosclient
+-e git+https://git@github.com/uc-cdis/cdislogging.git@0.0.2#egg=cdislogging
+-e git+https://git@github.com/uc-cdis/indexd.git@0.7.0#egg=indexd
