chore(setup): Add .swp to .gitignore, try fix for Travis
- Add .swp to .gitignore
- Try fix for boto/Travis from
https://github.com/travis-ci/travis-ci/issues/7940

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.7"
 install:
+  - export BOTO_CONFIG=/dev/null
   - python setup.py install
   - pip install -r dev-requirements.txt -r requirements.txt
 script: "py.test -v"
