--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 xmltodict==0.9.2
 boto>=2.36.0
 python-dateutil==2.4.2
+pyOpenSSL==16.2.0
+openpyxl==2.4.0
+ndg-httpsclient==0.4.3
 -e git+https://git@github.com/uc-cdis/indexclient.git@1.5.6#egg=indexclient
 -e git+https://github.com/uc-cdis/cdis-python-utils.git@0.2.8#egg=cdispyutils # required by indexd
 -e git+https://github.com/uc-cdis/doiclient.git@1.0.0#egg=doiclient
