--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
+dist: xenial
 python:
   - "2.7"
 install:
+  - export BOTO_CONFIG=/dev/null
   - python setup.py install
   - pip install -r dev-requirements.txt -r requirements.txt
 script: "py.test -v"
