Updated travis to use tox
Signed-off-by: Bilal Baqar <mbilalbaqar@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27,py3
+envlist = py27,py35
 
 [testenv]
 deps =
     -r requirements.txt
     -r dev-requirements.txt
+commands_pre =
+    python setup.py install 
 commands =
     py.test -v
