--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
 envlist = py27,py35
+requires =
+    pip >= 18.1
 
 [testenv]
 deps =
     -r requirements.txt
     -r dev-requirements.txt
-commands_pre =
-    python setup.py install 
 commands =
-    py.test -v
+    pytest {posargs:-v test}
