DEV-285 standardize dependency management workflow
Provide dependency ranges in setup.py. Define the dependencies for
lesser-used modules and scripts as "extras" so, e.g., consumers that
just want BotoManager won't have to install an Excel parser.

Remove requirements.txt since consumers should not be using it.
In its place, pin all the dependencies needed to test cdisutils
in dev-requirements.txt using pip-compile.

Fill in more metadata in setup.py. Use setuptools_scm to automatically
set the package version.

Set up a Jenkins build.

Enable coverage reporting with pytest-cov. Upgrade to the latest pytest
4.x to make the latest pytest-cov work.

Remove update_dictionary_dependency_chain.py since it doesn't fit
the new workflow and I don't believe we're currently using it besides.
Also remove the module with tungsten utilities since tungsten no longer
works in the way that module assumed.

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,3 @@
-# content of: tox.ini , put in same dir as setup.py
 [tox]
 envlist = py27,py35
 requires =
@@ -6,7 +5,15 @@ requires =
 
 [testenv]
 deps =
-    -r requirements.txt
     -r dev-requirements.txt
+
+# envsitepackagesdir lets pytest-cov find the source where tox actually
+# installed it, which might not be in the root of the repo.
 commands =
-    pytest {posargs:-v test}
+    pytest \
+        --cov={envsitepackagesdir}/bin \
+        --cov={envsitepackagesdir}/cdisutils \
+        --cov-report html \
+        --cov-report term \
+        --cov-report xml \
+        --junit-xml test-reports/results.xml {posargs: -v test}
