--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ venv/
 *.egg-info/
 .installed.cfg
 *.egg
+.eggs
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -36,6 +37,7 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 .pytest_cache/
 htmlcov/
+test-reports/
 .tox/
 .coverage
 .cache
@@ -64,3 +66,6 @@ target/
 
 # temp files
 *.swp
+
+# pyenv
+.python-version
