DEV-XXXX: Move to poetry and test cdisutils with python 3.6+

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,15 @@
 [tox]
-envlist = py27,py35
-requires =
-    pip >= 18.1
+envlist = py3{6,7,8,9,10,11}
+isolated_build = true
 
 [testenv]
-deps =
-    -r dev-requirements.txt
-
-# envsitepackagesdir lets pytest-cov find the source where tox actually
-# installed it, which might not be in the root of the repo.
+skip_install = true
+allowlist_externals = 
+    poetry
+commands_pre = 
+    poetry install --with=test
 commands =
-    pytest \
-        --cov={envsitepackagesdir}/bin \
-        --cov={envsitepackagesdir}/cdisutils \
-        --cov-report html \
-        --cov-report term \
-        --cov-report xml \
-        --junit-xml test-reports/results.xml {posargs: -v test}
+    coverage run --source bin,cdisutils -m pytest -lv --junit-xml test-reports/results.xml {posargs}
+    coverage report
+    coverage html
+    coverage xml
