--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,34 @@
+os: linux
+dist: jammy
 language: python
-dist: xenial
 python:
-  - "2.7"
-  - "3.5"
+   - "3.7"
+   - "3.8"
+   - "3.9"
+   - "3.10"
+   - "3.11"
+env: TOX_PYTHON=python
+addons:
+   apt:
+      packages:
+         - "python3-pip"
+         - "python3-venv"
 before_install:
-   sudo rm -f /etc/boto.cfg
+   - /usr/bin/python -m pip install pipx --user
 install:
-   pip install tox-travis
-script: tox
+   - pipx install --python=$TOX_PYTHON tox
+   - pipx inject --pip-args='--upgrade' tox setuptools
+   - pipx install poetry
+   - pipx inject poetry poetry-dynamic-versioning
+   - sudo rm -f /etc/boto.cfg
+script:
+   - export TOXENV=$(python -V | sed -E 's/Python ([2-3]).([0-9]+?).[0-9]+/py\1\2/g')
+   - tox
+
+jobs:
+   include:
+      - dist: focal
+        python: "3.6"
+        env: TOX_PYTHON=/usr/bin/python3.8
+        before_install:
+           - /usr/bin/python3.8 -m pip install pipx --user
