DEV-XXXX: Add extras.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ skip_install = true
 allowlist_externals = 
     poetry
 commands_pre = 
-    poetry install --with=test
+    poetry install --all-extras --with=test
 commands =
     coverage run --source bin,cdisutils -m pytest -lv --junit-xml test-reports/results.xml {posargs}
     coverage report
