--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,16 @@ version = "0.0.0"
 [tool.poetry.dependencies]
 boto = "^2.49.0"
 boto3 = ">=1.0,<2.0"
+future = "^0.18.2"
 python = ">=3.6.1"
 python-dateutil = "^2.8.2"
 pyyaml = "^6.0"
 six = "^1.16.0"
 urllib3 = "^1.26.13"
-future = "^0.18.2"
+python-novaclient = {version = ">=17.0,<18.0", optional = true}
+openpyxl = {version = "^3.0.10", optional = true}
+requests = {version = ">=2.7,<3.0", optional = true}
+xmltodict = {version = ">=0.9,<1.0", optional = true}
 
 [tool.poetry.group.test.dependencies]
 coverage = [
@@ -22,12 +26,16 @@ coverage = [
     { version = "^6.4.0", python = "^3.7" },
 ]
 more-itertools = ">=8.0,<9.0"
-moto = "^4.0.11"
+moto = ">=2.0,<3.0"
 pytest = ">=7.0,<8.0"
-
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = ">=2.0,<3.0"
+
+[tool.poetry.extras]
+dbgap = ["requests", "xmltodict"]
+excel = ["openpyxl"]
+nova = ["python-novaclient"]
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
