DEV-XXXX: Try to run gitlab ci.

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,5 @@ commands_pre =
     poetry install --all-extras --with=test
 commands =
     coverage run --source bin,cdisutils -m pytest -lv --junit-xml test-reports/results.xml {posargs}
-    coverage report
-    coverage html
+    coverage report -m
     coverage xml
