--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@
   image: $DOCKER_IMAGE-bullseye
 
   before_script:
+    - apt-get install python3-pip python3-venv
     - /usr/bin/python3.9 -m pip install pipx --user
     - pipx install poetry
     - pipx inject poetry poetry-dynamic-versioning
