--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,7 @@
 
   before_script:
     - apt-get update && apt-get install -y python3-pip python3-venv
-    - /usr/bin/python3.9 -m pip install pipx --user
-    - pipx install poetry
-    - pipx inject poetry poetry-dynamic-versioning
-    - pipx install tox
+    - /usr/bin/python3.9 -m pip install poetry poetry-dynamic-versioning tox
   script:
     - tox -e $PY_VERSION
 
