--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ nova = ["python-novaclient"]
 
 [[tool.poetry.source]]
 name = "gitlab"
-url = ""
+url = "https://gitlab.datacommons.io/api/v4/groups/10/-/packages/pypi"
 default = false
 secondary = false
 
