--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@
 
   before_script:
     - apt-get update && apt-get install -y python3-pip python3-venv
-    - /usr/bin/python3.9 -m pip install poetry poetry-dynamic-versioning tox
+    - /usr/bin/python3.9 -m pip install poetry==1.2.2 poetry-dynamic-versioning tox
   script:
     - tox -e $PY_VERSION
 
