DEV-XXXX: Deploy.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,5 +62,6 @@ deploy:3.9:
     - apt-get update && apt-get install -y python3-pip python3-venv
     - /usr/bin/python3.9 -m pip install poetry==1.2.2 poetry-dynamic-versioning tox
     - poetry config http-basic.gitlab 'gitlab-ci-token' "$CI_JOB_TOKEN"
-  script: 
+  script:
+    - poetry build -f wheel
     - poetry publish -r gitlab
