--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,9 @@ deploy:3.9:
   before_script:
     - apt-get update && apt-get install -y python3-pip python3-venv
     - /usr/bin/python3.9 -m pip install poetry==1.2.2 poetry-dynamic-versioning tox
-    - poetry config http-basic.gitlab 'gitlab-ci-token' "$CI_JOB_TOKEN"
+    - echo "$CI_PROJECT_ID"
+    - poetry config repositories.gitlab https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/packages/pypi
+    - poetry config -- http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
   script:
     - poetry build -f wheel
     - poetry publish -r gitlab
