--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,7 @@ deploy:3.9:
     - apt-get update && apt-get install -y python3-pip python3-venv
     - /usr/bin/python3.9 -m pip install poetry==1.2.2 poetry-dynamic-versioning tox
     - echo "$CI_PROJECT_ID"
+    - peotry config repositories.gitlab https://gitlab.datacommons.io/api/v4/projects/$CI_PROJECT_ID/packages/pypi
     - poetry config -- http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
   script:
     - poetry build -f wheel
