--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,10 @@
 
   before_script:
     - apt-get update && apt-get install -y python3-pip python3-venv
-    - /usr/bin/python3.9 -m pip install poetry==1.2.2 poetry-dynamic-versioning tox
+    - /usr/bin/python3.9 -m pip install pipx && pipx ensurepath && . ~/.bashrc
+    - pipx install poetry
+    - pipx inject poetry 'poetry-dynamic-versioning[poetry]' lockfile
+    - pipx install tox
   script:
     - tox -e $PY_VERSION
 
@@ -60,8 +63,10 @@ deploy:3.9:
   image: python:3.9-bullseye
   before_script:
     - apt-get update && apt-get install -y python3-pip python3-venv
-    - /usr/bin/python3.9 -m pip install poetry==1.2.2 poetry-dynamic-versioning tox
-    - echo "$CI_PROJECT_ID"
+    - /usr/bin/python3.9 -m pip install pipx && pipx ensurepath && . ~/.bashrc
+    - pipx install poetry
+    - pipx inject poetry 'poetry-dynamic-versioning[poetry]' lockfile
+    - pipx install tox
     - poetry config repositories.gitlab https://gitlab.datacommons.io/api/v4/projects/$CI_PROJECT_ID/packages/pypi
     - poetry config -- http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
   script:
