--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,13 +65,12 @@ deploy:3.9:
     - apt-get update && apt-get install -y python3-pip python3-venv
     - /usr/bin/python3.9 -m pip install pipx && pipx ensurepath && . ~/.bashrc
     - pipx install poetry
-    - pipx inject poetry lockfile
+    - pipx inject poetry 'poetry-dynamic-versioning[poetry]' lockfile
     - poetry config repositories.gitlab https://gitlab.datacommons.io/api/v4/projects/$CI_PROJECT_ID/packages/pypi
     - poetry config -- http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
-    - poetry self add 'poetry-dynamic-versioning[poetry]'
     - poetry run python -V
   script:
-    - git fetch --tags
+    - git fetch --all --tags
     - poetry version
     - poetry build -f wheel
     # - poetry publish -r gitlab
