--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ deploy:3.9:
     - poetry config -- http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
     - poetry run python -V
   script:
-    - git fetch --all --tags
+    - git rev-parse --abbrev-ref HEAD
     - poetry version
     - poetry build -f wheel
     # - poetry publish -r gitlab
