--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,8 +71,8 @@ deploy:3.9:
     - poetry run python -V
   script:
     - git fetch --all --tags
-    - git checkout $CI_COMMIT_BRANCH
-    - git pull
+    - git checkout $CI_COMMIT_REF_NAME
+    - git reset --hard $CI_COMMIT_SHA
     - git rev-parse --abbrev-ref HEAD
     - git describe --tags --abbrev=0
     - poetry version
