--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,11 +70,8 @@ deploy:3.9:
     - poetry config -- http-basic.gitlab gitlab-ci-token "$CI_JOB_TOKEN"
     - poetry run python -V
   script:
-    - git fetch --all --tags
-    - git checkout $CI_COMMIT_REF_NAME
-    - git reset --hard $CI_COMMIT_SHA
-    - git rev-parse --abbrev-ref HEAD
-    - git describe --tags --abbrev=0
+    - git checkout 1.9.0
+    - git checkout $CI_COMMIT_REF_NAME -- pyproject.toml
     - poetry version
     - poetry build -f wheel
     # - poetry publish -r gitlab
