--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ deploy:3.9:
     - poetry run python -V
   script:
     - git checkout 1.9.0
-    - git checkout $CI_COMMIT_REF_NAME -- pyproject.toml
+    - git checkout origin/$CI_COMMIT_REF_NAME -- pyproject.toml
     - poetry version
     - poetry build -f wheel
     # - poetry publish -r gitlab
