fix install in tox

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@ requires =
 
 [testenv]
 deps =
+    -r requirements.txt
     -r dev-requirements.txt
+install_command = python -m pip install --no-deps {opts} {packages}
 
 # envsitepackagesdir lets pytest-cov find the source where tox actually
 # installed it, which might not be in the root of the repo.
