--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,10 @@
 #
 #    pip-compile
 #
+--index-url https://nexus.osdc.io/repository/pypi-all/simple
 
-boto3-stubs[s3]==1.10.40.0
-    # via cdisutils (setup.py)
 boto3==1.16.63
-    # via
-    #   cdisutils (setup.py)
-    #   mypy-boto3
+    # via cdisutils (setup.py)
 boto==2.49.0
     # via cdisutils (setup.py)
 botocore==1.19.63
@@ -21,10 +18,6 @@ jmespath==0.10.0
     # via
     #   boto3
     #   botocore
-mypy-boto3-s3==1.10.40.0
-    # via boto3-stubs
-mypy-boto3==1.10.40.0
-    # via boto3-stubs
 python-dateutil==2.8.2
     # via
     #   botocore
@@ -37,11 +30,6 @@ six==1.16.0
     # via
     #   cdisutils (setup.py)
     #   python-dateutil
-typing-extensions==3.10.0.2
-    # via
-    #   boto3-stubs
-    #   mypy-boto3
-    #   mypy-boto3-s3
 urllib3==1.25.11
     # via
     #   botocore
