--- a/tox.ini
+++ b/tox.ini
@@ -18,4 +18,4 @@ commands =
         --cov-report html \
         --cov-report term \
         --cov-report xml \
-        --junit-xml test-reports/results.xml {posargs: -v test}
+        --junit-xml test-reports/results.xml {posargs: -v tests}
