--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -2,7 +2,7 @@
 # Test requirements.
 
 # TODO: Upgrade moto someday, maybe when we drop boto2.
-moto~=0.4
+moto>1,<1.3                 # for py35
 pytest~=4.6
 pytest-cov~=2.10
 
