--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,7 @@ pyyaml==5.3.1
 s3transfer==0.3.7
     # via boto3
 six==1.16.0
-    # via
-    #   cdisutils (setup.py)
-    #   python-dateutil
+    # via python-dateutil
 urllib3==1.25.11
     # via
     #   botocore
