--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,10 @@ requires =
     pip >= 18.1
 
 [testenv]
+setenv =
+    NO_PROXY=localhost,postgres
+    no_proxy=localhost,postgres
+
 deps =
     -r requirements.txt
     -r dev-requirements.txt
