Feat/dev 1762 drop python27 (#89)
* update dependencies

* remove py27 in travis and tox, remove deps for py2, remove mock, future, six,

* upgrade moto to 1.2.0, add flask, use subprocess for moto

* upgrade test_storage, add more tests for Boto3Manager

* add credentials to test_storage3

* set no_proxy:

* remove jenkins

* remove Programming Language :: Python :: 2 in setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,17 @@
 [tox]
-envlist = py27,py35
+envlist = py35,py36
 requires =
     pip >= 18.1
 
 [testenv]
+setenv =
+    NO_PROXY=localhost,postgres
+    no_proxy=localhost,postgres
+
 deps =
+    -r requirements.txt
     -r dev-requirements.txt
+install_command = python -m pip install --no-deps {opts} {packages}
 
 # envsitepackagesdir lets pytest-cov find the source where tox actually
 # installed it, which might not be in the root of the repo.
@@ -16,4 +22,4 @@ commands =
         --cov-report html \
         --cov-report term \
         --cov-report xml \
-        --junit-xml test-reports/results.xml {posargs: -v test}
+        --junit-xml test-reports/results.xml {posargs: -v tests}
