--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
-dist: xenial
+dist: focal
 python:
-  - "2.7"
   - "3.5"
+  - "3.6"
 before_install:
    sudo rm -f /etc/boto.cfg
 install:
