--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,32 @@
+---
 repos:
--   repo: git@github.com:Yelp/detect-secrets
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.1.0 # last version to support py36
+    hooks:
+      - id: check-json
+      - id: check-toml
+      - id: check-yaml
+      - id: end-of-file-fixer
+        exclude: .(svg|ipynb)$
+      - id: fix-encoding-pragma
+        args: [--remove]
+      - id: no-commit-to-branch
+        args: [--branch, develop, --branch, master, --pattern, release/.*]
+      - id: pretty-format-json
+        args: [--autofix]
+      - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.1.15 # last version to support py36
+    hooks:
+      - id: forbid-crlf
+      - id: forbid-tabs
+        exclude: .(py|yaml|yml|tsv)$
+      - id: remove-crlf
+      - id: remove-tabs
+        exclude: .(py|yaml|yml|tsv)$
+  - repo: git@github.com:Yelp/detect-secrets
     rev: v0.13.0
     hooks:
-    -   id: detect-secrets
+      - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
-
