--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
-envlist = py36
+envlist = py36,py37,py38,py39
 requires =
     pip >= 18.1
+skip_missing_interpreters =
+    true
 
 [testenv]
 setenv =
