--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
-envlist = py35,py36
+envlist = py36,py37,py38,py39
 requires =
     pip >= 18.1
+skip_missing_interpreters =
+    true
 
 [testenv]
 setenv =
@@ -9,7 +11,6 @@ setenv =
     no_proxy=localhost,postgres
 
 deps =
-    -r requirements.txt
     -r dev-requirements.txt
 install_command = python -m pip install --no-deps {opts} {packages}
 
