--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,10 @@ repos:
       - id: remove-crlf
       - id: remove-tabs
         exclude: .(py|yaml|yml|tsv)$
+  - repo: https://github.com/psf/black
+    rev: 22.3.0
+    hooks:
+      - id: black
   - repo: git@github.com:Yelp/detect-secrets
     rev: v0.13.0
     hooks:
