--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,8 @@ skip_missing_interpreters =
 
 [testenv]
 setenv =
-    NO_PROXY=localhost,postgres
-    no_proxy=localhost,postgres
+    NO_PROXY=localhost
+    no_proxy=localhost
 
 deps =
     -r dev-requirements.txt
