--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: check-json
       - id: check-toml
       - id: check-yaml
+        exclude: ^\.gitlab-ci.yml
       - id: end-of-file-fixer
         exclude: .(svg|ipynb)$
       - id: fix-encoding-pragma
