--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,21 @@ commands =
         --cov-report term \
         --cov-report xml \
         --junit-xml test-reports/results.xml {posargs: -v tests}
+
+[testenv:publish]
+changedir =
+passenv =
+  TWINE_*
+skip_install=true
+deps =
+    setuptools_scm
+    build
+    twine
+install_command =
+    python -m pip install {opts} {packages}
+commands =
+    python -m setuptools_scm
+    python -m build
+    python -m twine check dist/*
+    python -m twine upload dist/*
+commands_post=
