remove [dev-]requirements.txt

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,8 @@ setenv =
     no_proxy=localhost
 
 deps =
-    -r dev-requirements.txt
-install_command = python -m pip install --no-deps {opts} {packages}
+    .[dev]
+install_command = python -m pip install {opts} {packages}
 
 # envsitepackagesdir lets pytest-cov find the source where tox actually
 # installed it, which might not be in the root of the repo.
