--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,9 @@ include:
       - templates/common/python.yaml
       - templates/deployments/salt-service.yaml
 
+variables:
+  PRE_COMMIT_VERSION: 3.3.3
+
 .services:
   allow_failure: true
   stage: deploy
