--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,15 @@
 
 include:
   - project: nci-gdc/gitlab-templates
-    ref: 0.2.0
+    ref: 0.2.1
     file:
       - templates/global/full.yaml
       - templates/python/full.yaml
       - templates/common/python.yaml
       - templates/deployments/salt-service.yaml
+
+variables:
+  PRE_COMMIT_VERSION: 3.3.3
 
 .services:
   allow_failure: true
@@ -19,7 +22,7 @@ include:
 
 tox:
   stage: test
-  image: ${BASE_CONTAINER_REGISTRY}/python3.7-builder
+  image: ${BASE_CONTAINER_REGISTRY}/python3.7-builder:${BASE_CONTAINER_VERSION}
   tags:
     - dind
   before_script:
@@ -39,5 +42,3 @@ tox:
 release:
   before_script:
     - git fetch --unshallow || true
-  variables:
-    LEGACY_BASE_CONTAINER_VERSION: 2.3.1
